removed table owned_items
